# investments

./: .env.example  .gitignore  .vulture_whitelist.py  CLAUDE.md  Dockerfile  docker-compose.yml  pyproject.toml
.claude/: settings.json
.claude/agents/: code-reviewer.md  design-reviewer.md  diablo.md  orchestrator.md  performance-analyzer.md  qa-expert.md  rex.md  test-writer.md
.claude/commands/: 911-full.md  911.md  canary.md  council.md  da.md  decompose.md  docs.md  fix.md  gaps.md  general.md  improve-arch.md  init-project.md  intent.md  migrate-to-vault.md  orchestrate.md  plan-devex-review.md  quick-plan.md  report.md  review.md  rule.md  self-audit.md  setup.md  test.md  todo.md  vault-bootstrap.md
.claude/hooks/: context-budget-enforce.sh  pre-compact-checkpoint.sh  pre-compact-snapshot.sh  test-pre-compact-snapshot.sh  (+2 more)
.spec_system/: CONSIDERATIONS.md  CONVENTIONS.md  SECURITY-COMPLIANCE.md  state.json
app/: auth.py  config.py  db.py  main.py  models.py  scheduler.py
docs/: API.md  ARCHITECTURE.md  CONTEXT.md  CONVENTIONS.md  DEPLOY.md  FAILS.md  KNOWLEDGE.md  OUTLINE-CONTRACT.md  RULES.md  RUNBOOK.md  SCHEDULING.md  SELF-AUDIT-2026-05-08.md  STACK.md  TASK.md  handoff.md
migrations/: env.py
templates/: launchd-report.plist.template  launchd-task.plist.template  vulture_whitelist.py.template
tests/: conftest.py  test_analytics.py  test_dashboard.py  test_dip_scanner.py  test_freedom_adapter.py  test_freedom_xlsx.py  test_ibkr_parser.py  test_models.py  test_portfolio.py  test_prices.py  test_recommender.py  test_sync_routes.py  test_watchlist.py
(+141 files in other folders)
