[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "investments-assistant"
version = "0.1.0"
description = "Personal investment assistant for retirement savings"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "sqlalchemy>=2.0",
    "psycopg2-binary>=2.9",
    "alembic>=1.13",
    "jinja2>=3.1",
    "python-multipart>=0.0.9",
    "apscheduler>=3.10",
    "httpx>=0.27",
    "openai>=1.0",
    "python-telegram-bot>=20.0",
    "itsdangerous>=2.1",
    "bcrypt>=4.0",
    "cryptography>=42",
    "python-dotenv>=1.0",
    "pydantic-settings>=2.0",
    "pgvector>=0.3",
    "pandas>=2.2",
    "quantstats>=0.0.62",
    "pandas-ta>=0.3",
    "pypdf>=4.0",
    "beautifulsoup4>=4.12",
    "yfinance>=0.2",
    "tradernet",
    "openpyxl>=3.1",
    "sentence-transformers>=3.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "ruff>=0.4",
]

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]
ignore = ["E501"]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "e2e: end-to-end Playwright tests (require live server + DB)",
]

[dependency-groups]
dev = [
    "httpx>=0.27",
    "pytest-playwright>=0.7.2",
    "requests-mock>=1.12.1",
]
